--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\Jordy\\Anaconda3\\envs\\tensorflow-gpu\\python.exe"
+    "python.pythonPath": "C:\\Users\\Jordy\\Anaconda3\\envs\\tensorflow-gpu\\python.exe",
+    "git.ignoreLimitWarning": true
 }
